# nagare

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ja.md  hachi-uiへの要望.md  package-lock.json  package.json  playwright.config.ts
crates/nagare-cli/: Cargo.toml
crates/nagare-cli/src/: args.rs  commands.rs  main.rs  output.rs  ui.rs  ui_agent.rs  ui_answer.rs  ui_assets.rs  ui_detail.rs  ui_form.rs  ui_history.rs  ui_html.rs  ui_pages.rs
crates/nagare-cli/tests/: agent_management.rs
crates/nagare-core/: Cargo.toml
docs/: adapter_contract.md  agent-management-usecases.md  agent_data_model.md  agent_management.md  architecture.md  create-new-item-ui-evaluation.md  create-new-item-usecase.md  design-implementation-audit.md  design.md  domain-rubric-agent-design.html  nagare_requirements_v0_3.md  plan.md  project-aware-control-plane-usecases.md  prototype_requirements_v0_4.md  prototype_screen_spec_v0_1.md  spec.md  tutorial.md  tutorial_ja.md  workflow-state-design.html
docs/delta/: DR-20260526-agent-output-notes.md  DR-20260526-approval-gate-summary.md  DR-20260526-auto-recovery-advance.md  DR-20260526-finish-first-handoff-resume.md  DR-20260526-output-notes-recovery.md  DR-20260526-ui-e2e-agent-run-replay.md  DR-20260526-ui-e2e-command-replay.md  DR-20260526-ui-next-action-panel.md  DR-20260526-ui-serve-agent-management.md  DR-20260526-ui-serve-agent-visibility.md  DR-20260526-ui-serve-answer.md  DR-20260526-ui-serve-create.md  (+8 more)
scripts/: generate-control-plane-ui-mockups.js  generate-ui-mockups.js  install-dev-global.js  nagare-dev.js  stage-package-binary.js
(+31 files in other folders)
