[package]
name = "nagare-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nagare"
path = "src/main.rs"

[dependencies]
nagare-core = { path = "../nagare-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
